--- a/app/views/docs/_form.html.erb
+++ b/app/views/docs/_form.html.erb
@@ -4,18 +4,14 @@
     <%= f.text_field :title, id:"doc_title" %>
   </div>
 
-  <div class="field">
-    <%= f.label :catch_copy, "キャッチコピー" %><br />
-    <%= f.text_area :catch_copy, class: :form__text, id:"doc_catch_copy" %>
-  </div>
 
   <div class="field">
-    <%= f.label :concept, "コンセプト" %><br />
+    <%= f.label :concept, "書類の分類" %><br />
     <%= f.text_area :concept, class: :form__text, id:"doc_concept" %>
   </div>
 
   <div class="field">
-    <%= f.label :image, "プロトタイプの画像" %><br />
+    <%= f.label :image, "画像" %><br />
     <%= f.file_field :image, id:"doc_image" %>
   </div>
 
