--- a/app/views/docs/new.html.erb
+++ b/app/views/docs/new.html.erb
@@ -1,15 +1,9 @@
-
  <div class="main">
   <div class="inner">
     <div class="form__wrapper">
       <h2 class="page-heading">Redocへようこそ!</h2>
        <h2 class="page-heading">作成する書類の種類を選んでください</h2>
-      <div class="actions">
-       <%= link_to '送付状',doc_path(doc.id)%>
-
-
-       </div>
-
+     <%= render partial: "form"%>
        
   </div>
  </div>
